--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 *{
   margin : 0;
   padding : 0;
@@ -108,6 +109,7 @@ button:hover{
   padding: 1rem;
   background-color: var(--primaryColor);
   color: white;
+  font-weight: bold;
 }
 .recipe-btn{
   position: absolute;
